Remove Swagger
