# routes/api.php
@@ -12,4 +12,6 @@
 */
 
 Route::get('/', ['as' => 'root', 'uses' => 'RootController@get']);
-Route::get('/authenticated', ['as' => 'root', 'uses' => 'RootController@getAuthenticated'])->middleware('auth:api')->middleware('scopes:self:read');;
+Route::get('/authenticated', ['as' => 'root', 'uses' => 'RootController@getAuthenticated'])->middleware('auth:api')->middleware('scopes:self:read');
+
+Route::resource('users', 'UserController', ['except' => ['create', 'edit']]);
